style: minor changes to fix layout shifts

--- a/style.css
+++ b/style.css
@@ -93,6 +93,8 @@ body {
 
   display: grid;
   place-items: center;
+
+  min-height: 100vh;
 }
 
 button {
@@ -108,10 +110,9 @@ button {
 
   display: grid;
   place-items: center;
-  min-height: 100vh;
-
+  height: 100%;
   width: 65%;
-  grid-template-rows: auto auto auto;
+  grid-template-rows: 85px auto 60px;
   grid-template-columns: 1fr;
 
   border: var(--border-default);
@@ -214,8 +215,8 @@ button {
 
 /* Board  elements*/
 .board {
-  width: 800px;
-  height: 800px;
+  width: 65%;
+  height: 0;
 
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
@@ -227,9 +228,12 @@ button {
 }
 
 .board__row {
+  width: 100%;
+  height: 100%;
   display: grid;
   grid-template-rows: 1fr;
   grid-template-columns: 1fr 1fr 1fr;
+  place-items: center;
 }
 
 .board__row:not(:last-child) {
